fixed a style on mobile

--- a/src/components/Profile/ProfileSections/ProfileSections.css
+++ b/src/components/Profile/ProfileSections/ProfileSections.css
@@ -85,6 +85,7 @@
   }
 
   .profile-sections {
+    width: 100%;
     gap: 10px;
     padding-left: 0;
   }
